fixed chat scrolling behavior (horizontal scroll still a problem)

--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -34,6 +34,12 @@
   /* max-height: 200px; */
   height: calc(100% - 4rem);
   overflow: auto;
+  -ms-overflow-style: none;  /* IE and Edge */
+     scrollbar-width: none;  /* Firefox */
+}
+
+.chatfeed::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for Chrome, Safari and Opera */
 }
 
 .announcement-wrapper,
